--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@
 # Site configuration
 # Icon: https://RemixIcon.com/
 
-baseURL = "https://Spixed.github.io/"
+baseURL = "https://spixed.github.io/"
 title = "Spixed's Blog"
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"
@@ -12,7 +12,7 @@ hasCJKLanguage = false
 theme = "tony"
 
 # `hugo new` text editor for automatically opening new articles
-newContentEditor = ""
+newContentEditor = "Spixed"
 
 # Summary word limit
 summaryLength = 60
@@ -32,7 +32,7 @@ paginate = 39
     # Motto or introduction
     motto = "从现在起，一切归零。"
     # Avatar
-    avatar = "/images/t.jpg"
+    avatar = "/images/avatar.png"
     # Website (default: baseURL)
     website = "/"
     # GitHub
@@ -74,7 +74,7 @@ paginate = 39
     title = "Spixed's Blog"
     name = "Spixed"
     icon = "ri-code-box-line"
-    url = ""
+    url = "https://spixed.github.io/about#me"
 
 # Markdown renderer
 [markup]
@@ -143,7 +143,7 @@ paginate = 39
     # Site Information
 
     # Site LOGO
-    siteLogo = "/images/t.jpg"
+    siteLogo = "/images/logo.png"
     
     # Site description
     siteDescription = "Spixed's Blog. Just be better. "
@@ -194,7 +194,7 @@ paginate = 39
     # Description: "comments" in the front Matter of the article
     # Has priority over here
 
-    ## Valine
+    # ## Valine
     # enableValine = false
     # valineVersion = "latest"
     # valineAppId = ""
