--- a/hugo.toml
+++ b/hugo.toml
@@ -66,15 +66,23 @@ paginate = 39
         name = "Tags"
         weight = 3
     [[menu.main]]
+        url = "/archives"
+        name = "Archives"
+        weight = 4
+    [[menu.main]]
         url = "/about/"
         name = "About"
-        weight = 4
+        weight = 5
+    [[menu.main]]
+        url = "/links/"
+        name = "Links"
+        weight = 6
 
 [[params.pinned]]
     title = "Spixed's Blog"
     name = "Spixed"
     icon = "ri-code-box-line"
-    url = "/about#about-me"
+    url = "/about/me"
 
 # Markdown renderer
 [markup]
