Use magic to optimize format of my articles, update the translation of `process.en.md`, add a copy of Obsidian configurations `content/.obsidian`. The translation is almost done. Fight on!

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,9 @@ Thumbs.db
 node_modules/
 
 # Obsidian configuration
-content/.obsidian/
+# content/.obsidian/
+# Now I wanna use GitHub to make a copy of my Ob configs
+
+# Ob plugin indexing temp files
+content/.smtcmp_json_db
+content/.smtcmp_vector_db.tar.gz
