feat: 更新.gitignore文件以添加工具和AI代理文件夹，修改hugo.toml以移除右上角关于页面的按钮，更新文章以包含作者和精选标记，添加QQ表情转换工具的功能改进，删除不再需要的文件，更新主题子项目提交ID。

--- a/.gitignore
+++ b/.gitignore
@@ -9,17 +9,24 @@ Thumbs.db
 .vscode/
 .idea/
 
+# Tools
+tools/
+
 # Temporary files
 *.tmp
 *.log
+*.pyc
 
 # Node.js dependencies
 node_modules/
 
+# AI Agent files
+.augment/
+.roo/
+
 # Obsidian configuration
 content/.obsidian/
 # Now I wanna use GitHub to make a copy of my Ob configs
-# Do a test to see if it'll delete the existing files on GitHub. 
 
 # Ob plugin indexing temp files
 content/.smtcmp_json_db
