--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/tony"]
 	path = themes/tony
 	url = https://github.com/Spixed/hugo-theme-tony.git
+[submodule "themes/polymer"]
+	path = themes/polymer
+	url = https://github.com/Spixed/polymer.git
