feat: 更新博客配置、主题和内容结构
- 更新 Polymer 主题子模块至最新提交
- 重构内容页面使用布局模板替代手动元数据
- 添加 Qmoji 展示页面
- 更新作者头像路径和友链配置
- 清理 Hugo 构建缓存文件并更新 .gitignore
- 添加 README.md 和静态文件索引
- 统一文章日期格式和元数据结构

--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,14 @@ Thumbs.db
 
 # Tools
 tools/
+scripts/
+githooks/
 
 # Temporary files
 *.tmp
 *.log
 *.pyc
+.venv/
 
 # Node.js dependencies
 node_modules/
