--- a/data/authors.toml
+++ b/data/authors.toml
@@ -8,8 +8,8 @@ website = "https://spixed.is-a.dev/"
 weight = 3
 
 [spixed.bio]
-en = "Zero out everything from now on."
-zh = "从现在起，一切归零。"
+en = "From now on, I return to zero, for all that's past is but prologue."
+zh = "从现在起，一切归零；凡是过往，皆为序章。"
 
 [hetx]
 name = "δ-me13"
