feat: 更新主题、增加启用评论系统配置项并新增博客文章
- 更新主题相关配置和构建指南
- 增加启用 Waline 评论系统配置项
- 新增中英文双语文章《一环》(Closing the Loop)
- 更新《学校介绍》文章，补充高三作息和事件详情
- 更新《构建过程》文章，重写主题搭建教程
- 优化作者信息结构，将 bio 字段合并
- 将首篇博客的 featured 状态设为 false 并更新内容

--- a/data/authors.toml
+++ b/data/authors.toml
@@ -2,21 +2,15 @@
 name = "Spixed"
 nickname = "Spixed"
 avatar = "/site/spixed.png"
+bio = { en = "Henceforth, all returns to naught; what's past is but a prologue.", zh = "从现在起，一切归零；凡是过往，皆为序章。" }
 github = "https://github.com/Spixed"
 email = "Space369X@163.com"
 website = "https://spixed.is-a.dev/"
 weight = 3
 
-[spixed.bio]
-en = "From now on, I return to zero, for all that's past is but prologue."
-zh = "从现在起，一切归零；凡是过往，皆为序章。"
-
 [hetx]
 name = "δ-me13"
 nickname = "δ-me13"
 avatar = "/site/hetx.jpg"
+bio = { en = "Only pain doesn't lie.", zh = "唯有痛苦不会说谎。" }
 weight = 2
-
-[hetx.bio]
-en = "Only pain doesn't lie."
-zh = "唯有痛苦不会说谎。"
